[tool.poetry]
name = "markov-chain-tennis"
version = "0.1.0"
description = ""
authors = ["Henriquelay <37563861+Henriquelay@users.noreply.github.com>"]
license = "GPLv2"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
